read and write socket

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project(silicon)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(silicon main.cpp Server.cpp Server.h SiliconException.cpp SiliconException.h ExceptionCodes.h)
+add_executable(test-tcp test_tcp.cpp)
